# toy-workflow-library

./: .gitignore  Main.hs  Makefile  README.md  TODO  toyflow.cabal
src/: ToyFlow.hs
src/ToyFlow/: Filters.hs  Log.hs  Node.hs  Report.hs  Summary.hs
